--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,6 @@
-ml-32m/ml-32m/*.csv filter=lfs diff=lfs merge=lfs -text
+# 忽略所有 ml-* 格式的数据集文件
+ml-* filter=lfs diff=lfs merge=lfs -text
+
+# 忽略常见的数据集文件格式
+*.csv filter=lfs diff=lfs merge=lfs -text
+*.dat filter=lfs diff=lfs merge=lfs -text
