--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,53 @@
-# MovieLens 数据集
-ml-*/ 
-ml-*.zip
-ml-*.tar.gz
-
-# 数据文件
+# 数据集文件
+data/
 *.csv
 *.dat
+*.txt
+
+# 模型文件
+*.model
+*.pkl
+*.h5
+
+# 缓存文件
+__pycache__/
+*.py[cod]
+*$py.class
+.pytest_cache/
+.coverage
+htmlcov/
+
+# 环境文件
+venv/
+env/
+.env
+.venv
+ENV/
+
+# IDE配置文件
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+
+# 日志文件
+*.log
+logs/
+
+# 临时文件
+tmp/
+temp/
+
+# 输出文件
+plots/
+results/
+output/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+*.ipynb
+
+# 系统文件
+.DS_Store
+Thumbs.db
