--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 numpy>=1.21.0
+scipy>=1.7.0
 pandas>=1.3.0
-scikit-learn>=0.24.0
-scipy>=1.11.0
-matplotlib>=3.7.0
-psutil>=5.9.0
-tqdm>=4.65.0
+scikit-learn>=0.24.2
+matplotlib>=3.4.2
+seaborn>=0.11.1
